# simple_plan

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
cli_app/: Cargo.toml
cli_app/src/: lib.rs  main.rs
entities/: Cargo.toml
entities/src/: lib.rs  task_events.rs  todo_events.rs
event_store/: .env  Cargo.toml
event_store/migrations/2023-08-05-162827_plannable_events/: down.sql  up.sql
event_store/src/: lib.rs  models.rs  plannable_event_store.rs  plannable_events_repository.rs  schema.rs
others/apps/bevy_app/: Cargo.toml
others/apps/bevy_app/src/: main.rs
others/apps/cli_app/: Cargo.toml
others/apps/cli_app/src/: lib.rs
others/event_store/src/: lib.rs  models.rs  plannable_event_store.rs  plannable_task_event_store.rs  plannable_todo_event_store.rs  schema.rs
usecases/: Cargo.toml
usecases/src/: add_todo_usecase.rs  get_todo_usecase.rs  lib.rs
