[workspace]
resolver = "2"

members = [
 "app",
 "entities",
 "usecases",
 "others/event_store",
 "others/apps/cli_app",
 "others/apps/bevy_app",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
