[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli_app = { path = "../cli_app" }
usecases = { path = "../usecases" }
event_store = { path = "../event_store" }
entities = { path = "../entities" }
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
