[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "../entities" }
usecases = { path = "../usecases" }
cli_app = { path = "../others/apps/cli_app" }
event_store = { path = "../others/event_store" }
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
anyhow = "1.0"
